--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 body {
   display: grid;
-  grid-template-columns: minmax(1rem, auto) minmax(auto, 72ch) minmax(
-      1rem,
-      auto
-    );
+  grid-template-columns: minmax(1rem, auto) minmax(auto, 72ch) minmax(1rem, auto);
 }
 body > * {
   grid-column: 2;
+  background-color: black;
 }
 
 .fullbleed {
